--- a/TSIPortal/LoopForMissingColumnName.xaml
+++ b/TSIPortal/LoopForMissingColumnName.xaml
@@ -2,9 +2,9 @@
   <x:Members>
     <x:Property Name="in_RequiredFlatFileColumn" Type="InArgument(s:String[])" />
     <x:Property Name="out_ColumnMissingFlag" Type="OutArgument(x:Boolean)" />
-    <x:Property Name="in_FlatFileDatatable" Type="InArgument(sd:DataTable)" />
+    <x:Property Name="in_dt_FlatFile" Type="InArgument(sd:DataTable)" />
   </x:Members>
-  <sap:VirtualizedContainerService.HintSize>1150,730.666666666667</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1150,957.333333333333</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>ActivityBuilder_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="44">
@@ -63,63 +63,72 @@
       <AssemblyReference>NPOI</AssemblyReference>
       <AssemblyReference>UiPath.System.Activities.Design</AssemblyReference>
       <AssemblyReference>System.ServiceModel.Activities</AssemblyReference>
+      <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
-  <ui:ForEach x:TypeArguments="x:String" CurrentIndex="{x:Null}" DisplayName="For Each: Required column" sap:VirtualizedContainerService.HintSize="799.333333333333,666" sap2010:WorkflowViewState.IdRef="ForEach`1_9" Values="[in_RequiredFlatFileColumn]">
-    <ui:ForEach.Body>
-      <ActivityAction x:TypeArguments="x:String">
-        <ActivityAction.Argument>
-          <DelegateInArgument x:TypeArguments="x:String" Name="itemRequired" />
-        </ActivityAction.Argument>
-        <Sequence DisplayName="Body: Required flat file" sap:VirtualizedContainerService.HintSize="762.666666666667,538" sap2010:WorkflowViewState.IdRef="Sequence_2">
-          <sap:WorkflowViewStateService.ViewState>
-            <scg:Dictionary x:TypeArguments="x:String, x:Object">
-              <x:Boolean x:Key="IsExpanded">True</x:Boolean>
-            </scg:Dictionary>
-          </sap:WorkflowViewStateService.ViewState>
-          <ui:ForEach x:TypeArguments="x:Object" CurrentIndex="{x:Null}" DisplayName="For Each" sap:VirtualizedContainerService.HintSize="720.666666666667,446" sap2010:WorkflowViewState.IdRef="ForEach`1_11" Values="[in_FlatFileDatatable.Columns]">
-            <ui:ForEach.Body>
-              <ActivityAction x:TypeArguments="x:Object">
-                <ActivityAction.Argument>
-                  <DelegateInArgument x:TypeArguments="x:Object" Name="itemFlatFile" />
-                </ActivityAction.Argument>
-                <Sequence DisplayName="Body: Actual flat file" sap:VirtualizedContainerService.HintSize="684,318" sap2010:WorkflowViewState.IdRef="Sequence_3">
-                  <Sequence.Variables>
-                    <Variable x:TypeArguments="x:Boolean" Name="columnFlagValue" />
-                  </Sequence.Variables>
-                  <sap:WorkflowViewStateService.ViewState>
-                    <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                      <x:Boolean x:Key="IsExpanded">True</x:Boolean>
-                      <x:Boolean x:Key="IsPinned">False</x:Boolean>
-                    </scg:Dictionary>
-                  </sap:WorkflowViewStateService.ViewState>
-                  <If Condition="[itemFlatFile.ToString.Contains(itemRequired)]" DisplayName="If: Flat file contains required column" sap:VirtualizedContainerService.HintSize="642,226" sap2010:WorkflowViewState.IdRef="If_1">
-                    <If.Then>
-                      <ui:Comment DisplayName="Comment: Column name is correct" sap:VirtualizedContainerService.HintSize="334,55.3333333333333" sap2010:WorkflowViewState.IdRef="Comment_1" Text="// Required column name is correct" />
-                    </If.Then>
-                    <If.Else>
-                      <Assign DisplayName="Assign: IncorrectFlagValue" sap:VirtualizedContainerService.HintSize="262,62" sap2010:WorkflowViewState.IdRef="Assign_1">
-                        <Assign.To>
-                          <OutArgument x:TypeArguments="x:Boolean">[columnFlagValue]</OutArgument>
-                        </Assign.To>
-                        <Assign.Value>
-                          <InArgument x:TypeArguments="x:Boolean">True</InArgument>
-                        </Assign.Value>
-                      </Assign>
-                    </If.Else>
-                  </If>
-                </Sequence>
-              </ActivityAction>
-            </ui:ForEach.Body>
-          </ui:ForEach>
-        </Sequence>
-      </ActivityAction>
-    </ui:ForEach.Body>
+  <Sequence DisplayName="Sequence&quot; Validate flat files column" sap:VirtualizedContainerService.HintSize="841.333333333333,892.666666666667" sap2010:WorkflowViewState.IdRef="Sequence_4">
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
-        <x:Boolean x:Key="IsPinned">False</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-  </ui:ForEach>
+    <ui:LogMessage DisplayName="Log Message: Validating column names" sap:VirtualizedContainerService.HintSize="799.333333333333,94.6666666666667" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="Info" Message="[&quot;Validating column names&quot;]" />
+    <ui:ForEach x:TypeArguments="x:String" CurrentIndex="{x:Null}" DisplayName="For Each: Required column" sap:VirtualizedContainerService.HintSize="799.333333333333,666" sap2010:WorkflowViewState.IdRef="ForEach`1_9" Values="[in_RequiredFlatFileColumn]">
+      <ui:ForEach.Body>
+        <ActivityAction x:TypeArguments="x:String">
+          <ActivityAction.Argument>
+            <DelegateInArgument x:TypeArguments="x:String" Name="itemRequired" />
+          </ActivityAction.Argument>
+          <Sequence DisplayName="Body: Required flat file" sap:VirtualizedContainerService.HintSize="762.666666666667,538" sap2010:WorkflowViewState.IdRef="Sequence_2">
+            <sap:WorkflowViewStateService.ViewState>
+              <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+              </scg:Dictionary>
+            </sap:WorkflowViewStateService.ViewState>
+            <ui:ForEach x:TypeArguments="x:Object" CurrentIndex="{x:Null}" DisplayName="For Each: flat file columns" sap:VirtualizedContainerService.HintSize="720.666666666667,446" sap2010:WorkflowViewState.IdRef="ForEach`1_11" Values="[in_dt_FlatFile.Columns]">
+              <ui:ForEach.Body>
+                <ActivityAction x:TypeArguments="x:Object">
+                  <ActivityAction.Argument>
+                    <DelegateInArgument x:TypeArguments="x:Object" Name="itemFlatFile" />
+                  </ActivityAction.Argument>
+                  <Sequence DisplayName="Body: Actual flat file" sap:VirtualizedContainerService.HintSize="684,318" sap2010:WorkflowViewState.IdRef="Sequence_3">
+                    <Sequence.Variables>
+                      <Variable x:TypeArguments="x:Boolean" Name="columnFlagValue" />
+                    </Sequence.Variables>
+                    <sap:WorkflowViewStateService.ViewState>
+                      <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                        <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+                        <x:Boolean x:Key="IsPinned">False</x:Boolean>
+                      </scg:Dictionary>
+                    </sap:WorkflowViewStateService.ViewState>
+                    <If Condition="[itemFlatFile.ToString.Contains(itemRequired)]" DisplayName="If: Flat file contains required column" sap:VirtualizedContainerService.HintSize="642,226" sap2010:WorkflowViewState.IdRef="If_1">
+                      <If.Then>
+                        <ui:Comment DisplayName="Comment: Column name is correct" sap:VirtualizedContainerService.HintSize="334,55.3333333333333" sap2010:WorkflowViewState.IdRef="Comment_1" Text="// Required column name is correct" />
+                      </If.Then>
+                      <If.Else>
+                        <Assign DisplayName="Assign: IncorrectFlagValue" sap:VirtualizedContainerService.HintSize="262,62" sap2010:WorkflowViewState.IdRef="Assign_1">
+                          <Assign.To>
+                            <OutArgument x:TypeArguments="x:Boolean">[columnFlagValue]</OutArgument>
+                          </Assign.To>
+                          <Assign.Value>
+                            <InArgument x:TypeArguments="x:Boolean">True</InArgument>
+                          </Assign.Value>
+                        </Assign>
+                      </If.Else>
+                    </If>
+                  </Sequence>
+                </ActivityAction>
+              </ui:ForEach.Body>
+            </ui:ForEach>
+          </Sequence>
+        </ActivityAction>
+      </ui:ForEach.Body>
+      <sap:WorkflowViewStateService.ViewState>
+        <scg:Dictionary x:TypeArguments="x:String, x:Object">
+          <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+          <x:Boolean x:Key="IsPinned">False</x:Boolean>
+        </scg:Dictionary>
+      </sap:WorkflowViewStateService.ViewState>
+    </ui:ForEach>
+  </Sequence>
 </Activity>
